# Fluids_LB

./: .gitignore  CMakeLists.txt  README.md  code.cpp  script.sh
inc/: Figures.h  LB_Fluids.h
src/: Figures.cpp  LB_Fluids.cpp
